chore: Add some documentation to cvar_defaults

--- a/cfg/cvar_defaults.cfg
+++ b/cfg/cvar_defaults.cfg
@@ -1,7 +1,13 @@
-// ---------------------------------------------
-// JM: These are the correct defaults for P2CE.
-// Modifying these will affect gameplay.
-// ---------------------------------------------
+// --------------------------------------------------
+// This file defines default cvar values regardless
+// of the default value set in code.
+// Any cvar can be modified by this file, including
+// cheat vars regardless of the sv_cheats setting.
+// As such, this file should be included in a 
+// signed VPK so it cannot be modified by the 
+// end user. Otherwise, it'll be easy to cheat 
+// in your mod!
+// --------------------------------------------------
 
 // client
 cl_csm_auto_entity 0
