feat: update mounts.kv, cvar_defaults.cfg, and moddefaults.txt from p2ce

--- a/cfg/cvar_defaults.cfg
+++ b/cfg/cvar_defaults.cfg
@@ -9,16 +9,12 @@
 // in your mod!
 // --------------------------------------------------
 
+
 // client
 cl_csm_auto_entity 0
 cl_detaildist 1024
 cl_detailfade 400
 fov_viewmodel 54
-
-cl_richpresence_discord_client_id 747154846817452045
-
-// movement
-dmv_acceleration_min 0
 
 // hud
 hud_fastswitch 0
@@ -49,15 +45,15 @@ sv_airaccelerate 10
 scene_useactorpitch 0
 
 // render
-r_drawscreenoverlay 0
-r_drawunderwateroverlay 0
 r_physpropstaticlighting 0
 r_sequence_old_order 1
+r_portal_fastpath 0
 
 // misc
 zoom_sensitivity_ratio_joystick 0.5
 zoom_sensitivity_ratio_mouse 0.5
 sv_max_allowed_net_graph 2
+sv_max_allowed_developer 99999
 
 locator_background_border_color 268435456
 locator_background_border_thickness 3
@@ -68,5 +64,34 @@ locator_start_at_crosshair 0
 locator_target_offset_x 0
 locator_target_offset_y 0
 
-// Enable rich presence by default 
+// Enable current selected paint hud
+cl_hud_paint_gun_powers_indicator_show_current 1
+
+// Discord rich presence
+cl_richpresence_discord_client_id 747154846817452045
 cl_richpresence_enable 1
+
+// Temorary testing to gather feedback from testers
+portal_clone_displacements 1
+
+//
+// All lines below here are temporary fixes to avoid problematic codepaths
+//
+
+// Force full depth pass to avoid buggy depth resolve on ATI/Intel in dx9. No noticeable performance change.
+mat_resolveFullFrameDepth 2
+
+// Prevent blobulator from using matsys thread for drawing, causes deadlocking. No noticeable performance change.
+r_threaded_blobulator 0
+
+// Some other engine things
+das_max_z_trace_length 100000
+mat_motion_blur_forward_enabled 1
+mat_motion_blur_falling_min 8
+
+
+// Workaround for refract bugs. Just unlimit the number of FB updates per frame. Could be very bad for perf in some cases
+r_unlimitedrefract 1
+
+// We don't really need texture streaming, just causes stutters
+mat_texturestreaming 0
