rebase to latest staging part 1

--- a/cfg/cvar_defaults.cfg
+++ b/cfg/cvar_defaults.cfg
@@ -9,7 +9,6 @@
 // in your mod!
 // --------------------------------------------------
 
-
 // client
 cl_csm_auto_entity 0
 cl_detaildist 1024
@@ -37,6 +36,7 @@ sv_allowupload 1
 sv_alternateticks 1
 sv_air_max_wishspeed 60
 sv_phys_props_block_movers 1
+sv_quota_stringcmdspersecond 160
 sv_allow_legacy_cmd_execution_from_client 1
 sv_client_keyvalues_data_ratelimit_bytes 8192
 sv_airaccelerate 10
@@ -74,6 +74,9 @@ cl_richpresence_enable 1
 // Temorary testing to gather feedback from testers
 portal_clone_displacements 1
 
+// match bloom scale with portal 2's
+mat_bloomscale 1.0
+
 //
 // All lines below here are temporary fixes to avoid problematic codepaths
 //
@@ -89,9 +92,17 @@ das_max_z_trace_length 100000
 mat_motion_blur_forward_enabled 1
 mat_motion_blur_falling_min 8
 
+// Pivot: Temporary. Setting hardware morph to 1 completely breaks HL2 FACS flex controllers and causes mdls like Breen,
+// Kleiner, Alyx and Citizens to exhibit dorcelessness (literally), so I'm setting this to 0 for the time being until we
+// figure out a fix that allows both FACS and ASW/SFM hardware morph flexes to co-exist.
+r_hwmorph 0
 
 // Workaround for refract bugs. Just unlimit the number of FB updates per frame. Could be very bad for perf in some cases
 r_unlimitedrefract 1
 
 // We don't really need texture streaming, just causes stutters
 mat_texturestreaming 0
+
+// Not needed for p2ce, causes some issues with collisions
+traceray_force_vphysics 0
+traceray_unshrink_vphysics_brushes 0
